--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
           <p>Bonjour 👋</p>
           <h1>Bonjour, je m'appelle <span class="highlight-code">&ltMarc&gt</span></h1>
           <p>Je suis <span class="highlight-code">&ltdéveloppeur freelance&gt</span></p>
-          <p>Contactez-moi pour votre projet de site web !</p>
+          <p>Contactez-moi pour votre projet de site web ! 🎉</p>
         </div>
         <span id="typing-text-area"></span>
       </div>
@@ -47,6 +47,9 @@
   <div data-controller="aos" data-aos="fade-up-right" class="one-image-section">
     <h2 class="highlight-code">&lt Ma formation &gt</h2>
     <div class="one-image-section-content">
+      <div class='section-image-area'>
+        <%= image_tag '28.png', alt: "text", class:"section-image only-mobile" %>
+      </div>
       <div class="section-text-area">
         <p class="section-text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
@@ -56,7 +59,7 @@
         </p>
       </div>
       <div class='section-image-area'>
-        <%= image_tag '28.png', alt: "text", class:"section-image" %>
+        <%= image_tag '28.png', alt: "text", class:"section-image only-desktop" %>
       </div>
     </div>
   </div>
