--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,9 +12,9 @@ $font-size-base: 1rem;
 // Colors
 $body-color: $bootstrap-gray;
 $primary:    $primary-violet;
-$success:    $secondary-blue;
+$success:    $pastel-pink;
 $info:       $light-foamy;
-$danger:     $foamy;
+$danger:     $secondary-blue;
 $warning:    $bootstrap-orange;
 
 // Buttons & inputs' radius
