--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -12,7 +12,8 @@ $bootstrap-light-gray: #F4F4F4;
 
 // Custom
 $primary-violet: #6F14F5;
-$pastel-pink: #EF798A;
+// $pastel-pink: #EF798A;
+$pastel-pink: #e25540;
 $secondary-blue: #628BF7;
 $foamy: #ADFCDA;
 $light-foamy: #D9FEDF;
