--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,8 +17,8 @@
           <button id="home-call-to-a" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#contactModal">Me contacter</button>
         </div>
         <ul id="banner-links-list">
-          <a href="/" class="link"><i class="fa-brands fa-github"></i></a>
-          <a href="/" class="link"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://github.com/M-a-rc" class="link" target="_blank"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/marc-delesalle/" class="link" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </ul>
       </div>
     </div>
@@ -36,10 +36,14 @@
       </div>
       <div class="section-text-area">
         <p class="section-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-          Ici il y aura un texte super cool <br><br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+          La présence digitale est crutiale à la croissance d'une entreprise. 💻 <br>
+          En tant que développeur, je peux aider votre entreprise en lui créant un site internet moderne et attractif, ou en mettant au gout du jour un site déjà existant. 🚀
+          <br><br>
+          Ayant une grande expérience en gestion de projet, je mets un point d'honneur à comprendre les besoins clients et développer une solution qui va dans la bonne direction.<br>
+          Après validation du devis et du délai, je vous fournirai des retours périodiques quant à l'avancée du projet. Je prévois également dans le forfait du temps alloué à la maintenance du site, même après la livraison. Une réelle solution clé en main ! 👨‍🔧
+          <br><br>
+          Mon mot d'ordre ?<br>
+          <span class="highlight-code">Rien ne vaut un travail bien fait !</span>
         </p>
       </div>
     </div>
@@ -53,10 +57,12 @@
       </div>
       <div class="section-text-area">
         <p class="section-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-          Ici il y aura un texte super cool <br><br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+          <strong>Développeur certifié d'état RNCP niveau 6</strong>, je viens initialement d'une école d'<strong>ingénieur</strong> : l'Ecole Polytechnique Fédérale de Lausanne ! 🇨🇭🧀 <br>
+          Tel Asterix, j'ai appris chez les Helvètes le professionnalisme et la justesse. <span class='text-decoration-underline'>Rassurez-vous</span>, mon sang français compense la caractéristique <em>"Tranquille, y'a pas l'feu au laac ⛰️"</em> de nos amis alpins. Les délais fixés sont raisonnables et respectés.
+          <br><br>
+          Je me tiens informé des toutes dernières tendances et bonnes pratiques de code. Ces dernières sont crutiales pour que les moteurs de recherche mettent votre site en avant. De la même façon, j'intègre tous les modules nécessaires pour garantir la conformité aux normes RGPD.
+          <br><br>
+          En ce qui concerne la technologie que j'utilise, je développe des sites vitrines avec <em>wordpress</em>, pour lesquels je peux même développer un thème personnalisé, spécifiquement pour votre entreprise. Pour les besoins plus spécifiques, je peux développer des applications web en language ruby, avec le framwork Ruby on Rails. 💎
         </p>
       </div>
       <div class='section-image-area'>
@@ -73,10 +79,10 @@
     <div class="project-content">
       <div class="project-text-area">
         <p class="project-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-          Ici il y aura un texte super cool <br><br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-        </p>
+          Valentine, c’est le nouvel opticien pour hommes et femmes à La Rochelle. C’est aussi, un service personnalisé, une collection haut-de-gamme inspirée des dernières tendances, des marques comme Bash, Chanel, Ray-Ban, STARCK… Et bien plus encore !
+          Chez Valentine Opticiens, les montures sont haut-de-gamme, et les marques sélectionnées avec grande attention, afin de proposer des lunettes élégantes et de qualité.
+          <br><br>
+          Conscient de l’importance des lunettes dans notre quotidien, leurs équipes sont formées pour vous apporter un service sur-mesure adapté à vos besoins. Elles font de votre confort et de votre bien-être visuel leur priorité. Les opticiens-lunetiers pourront vous aider à trouver une monture adaptée à votre vue et à votre morphologie de visage.
       </div>
       <div class='project-image-area'>
         <%= image_tag 'Valentine-logo.png', alt: "text", class:"project-logo" %>
@@ -96,10 +102,15 @@
       </div>
       <div class="project-text-area">
         <p class="project-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-          Ici il y aura un texte super cool <br><br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-          Unde perferendis excepturi, neque iusto repudiandae dolores corporis, recusandae itaque adipisci nesciunt corrupti mollitia voluptates maiores nihil blanditiis non! Dicta aut esse quibusdam odit fugiat obcaecati exercitationem, tempore sunt itaque!
+          Eligia aide les familles endeuillées en les déchargeant autant que possible des tâches administratives qui leur incombent suite à la perte d'un être cher.
+          <br><br>
+          Le décès d'un proche est l'un des moments les plus douloureux de la vie de chacun. Personne n’est jamais réellement préparé à une pareille douleur. Néanmoins, en dépit de la peine et de l'émotion plusieurs démarches doivent être entreprises par les familles lors du départ d'un proche. Parmi-elles, la résiliation de tous les abonnements commerciaux, sans quoi leur règlement revient légalement aux héritiers.
+          <br><br>
+          Pour protéger les familles de cette peine supplémentaire et inutile nous avons créé Eligia :
+          L’outil en ligne des démarches du deuil. <br>
+          • Saisissez les contrats à résilier,<br>
+          • Fournissez les informations suffisantes et nécessaires,<br>
+          • Nous nous occupons du reste. Tous les justificatifs sont ensuite disponibles sur un tableau de bord personnalisé.
         </p>
       </div>
     </div>
@@ -112,10 +123,11 @@
     <div class="project-content">
       <div class="project-text-area">
         <p class="project-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea et aut animi? Veritatis dicta sit reprehenderit repudiandae natus, aliquid velit itaque ducimus nesciunt omnis quam earum placeat fuga dolorum delectus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione blanditiis dicta est? Atque voluptatibus magni totam exercitationem magnam tempora enim cum commodi molestiae sed blanditiis laborum aperiam, cupiditate nihil? <br><br>
-          Ici il y aura un texte super cool <br><br>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni dolore labore vel dolorem doloribus reprehenderit sit in quae consequuntur quidem soluta aspernatur blanditiis consequatur magnam aperiam quia id, maiores delectus.
-      </div>
+          A l'heure actuelle, les citoyens ne se sentent pas entendus par les élus. Et dans le même temps, bien que les mots 'data' et 'intelligence artificielle' soient utilisés à tord et à travers, les mairies peinent à sonder précisément et directement leur commune pour obtenir un retour constructif sur leurs politiques. <br><br>
+          C'est là que Populum entre en jeu. <br><br>
+          Populum rend possible, dès aujourd'hui, la démocratie participative de demain. <br><br>
+          Les citoyens peuvent émettre des suggestions et exprimer et ainsi exprimer des idées. Ils peuvent également upvoter d'autres suggestions ou les commenter. Les élus de leur côté peuvent monitorer les suggestions par quartiers, et créer divers sondages à destination des citoyens.
+      </div>c
       <div class='project-image-area'>
         <%= image_tag 'Populum.png', alt: "text", class:"project-logo" %>
         <%= render 'carousel', carousel_id: 'carousel-3', image_1: 'populum-1.png', image_2: 'populum-2.png', image_3: 'populum-3.png', mobile: true %>
@@ -134,6 +146,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+        <p>
+          N'hésitez pas à me contacter pour discuter de votre projet. Je reviendrai vers vous aussi vite que possible.
+        </p>
         <ul style="list-style: none">
           <li>
             <i class="fa-solid fa-phone color-violet"></i> : +33 6 27 99 73 23
